# robo-data-project-template

./: .gitignore  .gitmodules  start-all-services.sh  stop-all-services.sh
api-gateway/: .gitignore  Dockerfile  README.md  mvnw  pom.xml  run-gateway.sh
data-platform-olap/: .gitignore  PRD.md  README.md  docker-compose.yml
data-platform-olap/backend/: .dockerignore  Dockerfile  README.md  bpm_sample_data.sql  pyproject.toml  sample_data.sql  test_etl.py
data-platform-olap/backend/app/: __init__.py  db_executor.py  main.py  metadata_store.py  models.py  sql_generator.py  sql_validator.py  xml_parser.py
data-platform-olap/backend/app/api/: __init__.py  airflow_routes.py  etl_routes.py  routes.py
data-platform-olap/backend/app/core/: config.py
data-platform-olap/backend/app/langgraph_workflow/: __init__.py  text2sql.py
data-platform-olap/backend/app/models/: __init__.py  cube.py  query.py
data-platform-olap/backend/app/services/: __init__.py  airflow_service.py  db_executor.py  etl_service.py  metadata_store.py  neo4j_client.py  sql_generator.py  xml_parser.py
data-platform-olap/backend/data/: cubes.json  etl_configs.json
data-platform-olap/backend/schemas/: bpm_cube.xml  sales_cube.xml
what-if-simulator/: PRD.md  README.md  causal_discovery.py  causal_discovery_results.json  cld_generator.py  config.py  continuous_learning.py  data_literacy.py  edge_based_simulation.py  edge_simulation_results.json  influence_functions.json  kpi_monthly.csv  literacy_report.json  mindsdb_connector.py  mindsdb_simulation_results.json  model_validation.py  run_api.py  (+13 more)
(+49 files in other folders)
