[project]
name = "ai-pivot-studio"
version = "0.1.0"
description = "AI Pivot Studio - Mondrian XML → Pivot UI + Text2SQL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.20",
    "asyncpg>=0.29.0",
    "python-multipart>=0.0.6",
    "lxml>=5.1.0",
    "httpx>=0.26.0",
    "neo4j>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]
